--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,4 +14,12 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.ACCESS_TOKEN }}
+          config_timezone: Europe/Madrid
+          base: header
+          plugin_isocalendar: yes
+          plugin_achievements: yes
+          plugin_achievements_secrets: yes
+          plugin_achievements_limit: 0
+          plugin_languages: yes
+          config_order: base.header, isocalendar, achievements, languages
