--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.ACCESS_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN }}
           config_timezone: Europe/Madrid
           plugin_languages: yes
           config_order: languages
